# pyRadPlan

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: core.doctree  cst.doctree  ct.doctree  dij.doctree  dose.doctree  dose.engines.doctree  geometry.doctree  index.doctree  io.doctree  machines.doctree  optimization.doctree  pln.doctree  raytracer.doctree  scenarios.doctree  stf.doctree  util.doctree
.doctrees/help/: help.doctree
.doctrees/installation/: index.doctree
.doctrees/user_guide/: index.doctree
.github/workflows/: sphinx.yml  tests.yml
_modules/: index.html
_modules/pyRadPlan/: scenarios.html
_modules/pyRadPlan/core/: _exceptions.html  _grids.html  datamodel.html  np2sitk.html  resample.html
_modules/pyRadPlan/cst/: _cst.html  _voi.html
_modules/pyRadPlan/ct/: _ct.html  _hlut.html
_modules/pyRadPlan/dij/: _dij.html
_modules/pyRadPlan/dose/: _calc_dose.html
_modules/pyRadPlan/geometry/: lps.html
_modules/pyRadPlan/io/: _matlab_file_handler.html  _patient_loader.html
_modules/pyRadPlan/machines/: _base.html  _ions.html  _load.html  _photons.html  _validate.html
_modules/pyRadPlan/optimization/: _fluence_optimization.html
_modules/pyRadPlan/plan/: _plans.html
_modules/pyRadPlan/raytracer/: _base.html  _perf.html  _siddon.html
_modules/pyRadPlan/scenarios/: _base.html  _nominal.html
_modules/pyRadPlan/stf/: _beam.html  _beamlet.html  _rangeshifter.html  _ray.html  _steeringinformation.html
_modules/pyRadPlan/util/: helpers.html
_sources/api/: dose.rst.txt  geometry.rst.txt  optimization.rst.txt  pln.rst.txt  scenarios.rst.txt
api/: core.html  cst.html  ct.html  dij.html  dose.engines.html  dose.html  geometry.html  index.html  io.html  machines.html  optimization.html  pln.html  raytracer.html  scenarios.html  stf.html  util.html
docs/: conf.py  index.rst  requirements.txt
docs/api/: core.rst  cst.rst  ct.rst  dij.rst  dose.engines.rst  index.rst  io.rst  machines.rst  raytracer.rst  stf.rst  util.rst
docs/help/: help.rst
docs/installation/: index.rst
docs/user_guide/: index.rst
examples/: carbon_pencilbeam.py  helium_pencilbeam.py  import_matrad_patient.py  pencilbeam_vhee.py  photon_pencilbeam.py  proton_MC_FRED.py  proton_let_optimization.py  proton_pencilbeam.py
help/: help.html
installation/: index.html
pyRadPlan/: GUI.py  __init__.py
pyRadPlan/analysis/: __init__.py  _dvh.py
pyRadPlan/core/: __init__.py  _exceptions.py  _grids.py  datamodel.py  np2sitk.py  resample.py
pyRadPlan/cst/: __init__.py  _cst.py  _voi.py
pyRadPlan/ct/: __init__.py  _ct.py  _hlut.py
pyRadPlan/data/machines/: VHEE_Generic.mat
pyRadPlan/data/stf/: matrad_stf_onebeam.mat
pyRadPlan/dij/: __init__.py  _compose_beam_dijs.py  _dij.py
pyRadPlan/dose/: __init__.py  _calc_dose.py
pyRadPlan/dose/engines/: __init__.py  _base.py  _base_montecarlo.py  _base_pencilbeam.py  _base_pencilbeam_particle.py  _factory.py  _fredmc.py  _hongpb.py  _svdpb.py
pyRadPlan/geometry/: __init__.py  lps.py
pyRadPlan/io/: __init__.py  _matlab_file_handler.py  _patient_loader.py  matLabFileHandler.py  matRad.py  matfile.py  readHLUT.py
pyRadPlan/io/temp_files/: pln.mat  stf_with_separate_rays.mat
pyRadPlan/machines/: __init__.py  _base.py  _ions.py  _load.py  _photons.py  _validate.py
pyRadPlan/machines/base/: __init__.py  _base.py  _external_beam.py  _factory.py  _internal_beam.py
pyRadPlan/machines/particles/: __init__.py  _base.py  _beam_cutoff.py  _beam_emittance.py  _beam_energy.py  _beam_focus.py  _ions.py  _vhee.py
pyRadPlan/machines/photons/: __init__.py  _base.py  _linac.py  _svd_kernel.py
pyRadPlan/matRad/: __init__.py  _engine.py  _matlab.py  _octave.py
pyRadPlan/optimization/: __init__.py  _fluenceOptimizer.py  _fluence_optimization.py  _objective.py  _optiprob.py
pyRadPlan/optimization/components/: __init__.py  _optimizationProblem.py
pyRadPlan/optimization/new_templates/: objectives.py  planning_problem_sketch.py  scalarization_method.py  tradeoff_exploration_method.py
pyRadPlan/optimization/objectives/: _EUD.py  __init__.py  _doseUniformity.py  _eud.py  _factory.py  _maxDVH.py  _max_dvh.py  _mean.py  _meanDose.py  _minDVH.py  (+9 more)
pyRadPlan/plan/: __init__.py  _plans.py
pyRadPlan/quantities/: __init__.py  _base.py  _dose.py  _let_x_dose.py
pyRadPlan/raytracer/: __init__.py  _base.py  _perf.py  _siddon.py
pyRadPlan/scenarios/: __init__.py  _base.py  _nominal.py
pyRadPlan/stf/: __init__.py  _base.py  _beam.py  _beamlet.py  _exceptions.py  _externalbeam.py  _generate_stf.py  _ions.py  _photons.py  _rangeshifter.py  _ray.py  _steeringinformation.py  base_matrad.py  loadHLUT.py
pyRadPlan/util/: __init__.py  helpers.py
pyRadPlan/visualization/: __init__.py  _plot_slice.py
test/: conftest.py  test_dij.py  test_fileHandling.py  test_grid.py  test_helpers.py  test_machine_model.py  test_matlabEngine.py  test_objectives.py  test_octaveEngine.py  test_plan.py  test_raytracersiddon.py  test_scenarios.py
test/analysis/: test_dvh.py
test/core/: test_coordinates.py  test_datamodel.py  test_np2sitk.py  test_resample.py
test/cst/: conftest.py  test_VOI.py  test_cst.py
test/ct/: test_ct.py  test_hlut.py
test/data/: carbon_testData.mat  helium_testData.mat  photons_testData.mat  protons_testData.mat  test_validate_test_data.py
test/dose/: conftest.py  test_dose_engine_base.py  test_dose_particle.py  test_dose_photon.py  test_factory.py  test_fred.py  test_hongpb.py  test_svdpb.py
test/geometry/: test_lps.py
test/optimization/: test_fluence_optiprob.py  test_ipopt_solver.py  test_objectives.py  test_problem_factory.py  test_scipy_solver.py  test_solver_factory.py
test/quantities/: test_dose_quantity.py  test_let_dose_quantity.py
test/stf/: test_beamlet.py  test_stf.py  test_stf_gen.py
test/visualization/: test_plot_slice.py
user_guide/: index.html
(+62 files in other folders)
